3-Terraform-IaC/sg.tf
resource "aws_security_group" "bastion_sg" {
  name        = "bastion_sg"
  description = "Allow Bastion access to private servers"
  vpc_id      = aws_vpc.kodehauz_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "kodehauz_lb_sg" {
  name        = "Load Balancer Security Group"
  description = "Allow Inbound HTTP Traffic"
  vpc_id      = aws_vpc.kodehauz_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "app_sg" {
  name        = "APP_SG"
  description = "Allow ssh inbound traffic from Bastion, and http traffic from loadbalancer"
  vpc_id      = aws_vpc.kodehauz_vpc.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.kodehauz_lb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
